Fix the tab bar and handle background in `content-visibility: hidden` mode
The issue arouse because the widgets with content-visibility take up
background space and contributed white background, thus the background
of the shell container behind was no longer visible through
transparent tab bar and handles. By giving the handles and tab bar
a solid background of the same color we solve the issue without
any user-facing changes.

Also split panel handle

Only select split handles

One more case

Use `:after`

--- a/packages/application/style/tabs.css
+++ b/packages/application/style/tabs.css
@@ -23,6 +23,7 @@
   overflow: visible;
   color: var(--jp-ui-font-color1);
   font-size: var(--jp-ui-font-size1);
+  background: var(--jp-layout-color3);
 }
 
 .lm-DockPanel-tabBar[data-orientation='horizontal'],
@@ -181,4 +182,11 @@
   min-width: var(--jp-private-horizontal-tab-width);
   padding: 0 10px;
   transform: translateX(-40%) translateY(-58%);
+}
+
+#jp-main-vsplit-panel > .lm-SplitPanel-handle::after,
+#jp-main-split-panel > .lm-SplitPanel-handle::after,
+#jp-main-content-panel > .lm-SplitPanel-handle::after,
+.lm-DockPanel-handle::after {
+  background: var(--jp-layout-color3);
 }
